# fast_zero

./: .coverage  pyproject.toml
tests/: test_app.py
